[project]
name = "frc-log-puller"
version = "0.1.0"
description = "FRC match log puller and video downloader"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.0",
    "requests>=2.28",
    "yt-dlp>=2024.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
frc-log-puller = "log_puller:main"
